--- a/assets/static/build.css
+++ b/assets/static/build.css
@@ -634,26 +634,6 @@ h6 {
   --tw-contain-style:  ;
 }
 
-.container {
-  width: 100%;
-  margin-right: auto;
-  margin-left: auto;
-  padding-right: 12px;
-  padding-left: 12px;
-}
-
-@media (min-width: 680px) {
-  .container {
-    max-width: 680px;
-  }
-}
-
-@media (min-width: 744px) {
-  .container {
-    max-width: 744px;
-  }
-}
-
 .label {
   position: absolute;
   top: -0.5rem;
@@ -762,21 +742,67 @@ h6 {
   overflow: auto;
 }
 
-.chat pre code {
-  display: block;
+.hl-chroma {
+  position: relative;
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+  flex: 1 1 0%;
+  overflow-x: auto !important;
   border-radius: var(--border-radius);
   border-color: oklch(var(--primary) / 0.1);
-  background-color: oklch(var(--sidebar-background) / 0.2);
-  padding-left: 1rem;
-  padding-right: 1rem;
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
+  background-color: oklch(var(--sidebar-background) / 0.1);
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+  padding-top: 0.5rem !important;
+  padding-bottom: 0.5rem !important;
   font-family: var(--font-mono);
   font-size: 11px;
   line-height: 13px;
   letter-spacing: 0.005em;
+  color: oklch(var(--foreground) / 0.7);
+  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.hl-line {
+  display: flex;
+}
+
+.hl-kd {
   --tw-text-opacity: 1;
-  color: oklch(var(--foreground) / var(--tw-text-opacity));
+  color: oklch(var(--primary) / var(--tw-text-opacity));
+}
+
+.hl-p {
+  --tw-text-opacity: 1;
+  color: oklch(var(--alt-foreground) / var(--tw-text-opacity));
+}
+
+.hl-c {
+  --tw-text-opacity: 1;
+  color: oklch(var(--warning) / var(--tw-text-opacity));
+}
+
+.hl-o {
+  font-weight: 700;
+  --tw-text-opacity: 1;
+  color: oklch(var(--primary) / var(--tw-text-opacity));
+}
+
+.hl-nf {
+  --tw-text-opacity: 1;
+  color: oklch(var(--secondary-background) / var(--tw-text-opacity));
+}
+
+.hl-k {
+  --tw-text-opacity: 1;
+  color: oklch(var(--warning) / var(--tw-text-opacity));
+}
+
+.hl-kt {
+  --tw-text-opacity: 1;
+  color: oklch(var(--success) / var(--tw-text-opacity));
 }
 
 .chat > code,
@@ -795,26 +821,6 @@ h6 {
   letter-spacing: 0.005em;
   line-height: 10px;
   color: oklch(var(--primary) / 0.8);
-}
-
-.chat .hljs {
-  position: relative;
-  margin-top: 0.5rem;
-  margin-bottom: 0.5rem;
-  flex: 1 1 0%;
-  overflow-x: auto !important;
-  border-color: oklch(var(--primary) / 0.1);
-  background-color: oklch(var(--sidebar-background) / 0.1);
-  padding-left: 0.75rem;
-  padding-right: 0.75rem;
-  padding-top: 0.5rem !important;
-  padding-bottom: 0.5rem !important;
-  font-family: var(--font-mono);
-  font-size: 11px;
-  line-height: 13px;
-  letter-spacing: 0.005em;
-  --tw-text-opacity: 1;
-  color: oklch(var(--foreground) / var(--tw-text-opacity));
 }
 
 .chat hr {
@@ -950,6 +956,10 @@ h6 {
   border-bottom-width: 0px;
 }
 
+.message-edited {
+  background-color: oklch(var(--primary) / 0.2) !important;
+}
+
 .button {
   border-radius: var(--border-radius);
   padding-left: 0.5rem;
@@ -1004,13 +1014,6 @@ h6 {
 
 .button-basic:hover {
   background-color: oklch(var(--sidebar-background) / 0.9);
-}
-
-#toast-container {
-  position: fixed;
-  bottom: 0.75rem;
-  right: 0.75rem;
-  z-index: 50;
 }
 
 .toast {
@@ -1079,6 +1082,77 @@ h6 {
           mask-image: url("data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTAiIGhlaWdodD0iMTAiIHZpZXdCb3g9IjAgMCAxMCAxMCIgZmlsbD0ibm9uZSIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIj4KPHJlY3Qgd2lkdGg9IjEiIGhlaWdodD0iMSIgZmlsbD0iY3VycmVudENvbG9yIi8+Cjwvc3ZnPgo=");
   background-image: linear-gradient(90deg, transparent, rgb(66, 66, 90) 0, rgb(66, 66, 90) 100%, transparent);
   content: '';
+}
+
+.message-box:after {
+  background: linear-gradient(to right,rgba(245, 192, 192,0.7) 20%, rgba(245, 192, 192,0.7) 40%,oklch(var(--sidebar-background)) 50%,oklch(var(--sidebar-background)) 55%, rgba(245, 192, 192,0.7) 70%, rgba(245, 192, 192,0.7) 100%);
+  animation: shine 3s ease .1s forwards;
+  background-size: 200% auto;
+  content:"";
+  z-index:-1;
+  border-radius: 0.375rem;
+  position:absolute;
+  top:-2px;
+  left:-2px;
+  width:calc(100% + 4px);
+  height:calc(100% + 4px)
+}
+
+@keyframes shine {
+  to {
+    background-position:200%;
+    opacity:0
+  }
+}
+
+.loading-bar {
+  background: linear-gradient(90deg, rgba(245, 192, 192,0), rgba(245, 192, 192, 0.7) 20%, oklch(var(--sidebar-background)) 67.19%, oklch(var(--alt-background)));
+  height: 1px;
+  position: absolute;
+  z-index: -1;
+  opacity: 0;
+}
+
+.htmx-request.loading-bar {
+  animation: showTopShine .1s ease .2s forwards;
+}
+
+.htmx-request.loading-bar:after {
+  content:"";
+  width:50%;
+  height:1px;
+  position:absolute;
+  background:linear-gradient(90deg,transparent 0, rgba(245, 192, 192, 0.8) 50%,transparent 100%);
+  top:-1px;
+  opacity:0;
+  animation-duration:1.5s;
+  animation-delay:1s;
+  animation-timing-function:ease;
+  animation-name:loading;
+  animation-iteration-count: infinite;
+}
+
+@keyframes loading {
+  0% {
+    opacity:0;
+    transform:translateX(0)
+  }
+
+  50% {
+    opacity:1;
+    transform:translateX(100%)
+  }
+
+  to {
+    opacity:0;
+    transform:translateX(0)
+  }
+}
+
+@keyframes showTopShine {
+  to {
+    opacity:1
+  }
 }
 
 .dropdown-menu {
@@ -1168,8 +1242,8 @@ h6 {
   inset: 0px;
 }
 
-.-top-5 {
-  top: -1.25rem;
+.bottom-0 {
+  bottom: 0px;
 }
 
 .bottom-2 {
@@ -1178,10 +1252,6 @@ h6 {
 
 .bottom-5 {
   bottom: 1.25rem;
-}
-
-.bottom-\[-8px\] {
-  bottom: -8px;
 }
 
 .bottom-\[7px\] {
@@ -1212,16 +1282,24 @@ h6 {
   right: 0.75rem;
 }
 
-.right-7 {
-  right: 1.75rem;
+.right-5 {
+  right: 1.25rem;
 }
 
 .top-0 {
   top: 0px;
 }
 
+.top-12 {
+  top: 3rem;
+}
+
 .top-2 {
   top: 0.5rem;
+}
+
+.top-\[950px\] {
+  top: 950px;
 }
 
 .z-10 {
@@ -1232,12 +1310,32 @@ h6 {
   z-index: 50;
 }
 
-.m-2 {
-  margin: 0.5rem;
+.z-\[99999\] {
+  z-index: 99999;
 }
 
-.m-4 {
-  margin: 1rem;
+.z-\[999\] {
+  z-index: 999;
+}
+
+.col-span-1 {
+  grid-column: span 1 / span 1;
+}
+
+.col-span-2 {
+  grid-column: span 2 / span 2;
+}
+
+.m-1 {
+  margin: 0.25rem;
+}
+
+.m-1\.5 {
+  margin: 0.375rem;
+}
+
+.m-2 {
+  margin: 0.5rem;
 }
 
 .mx-1 {
@@ -1255,11 +1353,6 @@ h6 {
   margin-right: 0.75rem;
 }
 
-.mx-auto {
-  margin-left: auto;
-  margin-right: auto;
-}
-
 .my-0 {
   margin-top: 0px;
   margin-bottom: 0px;
@@ -1270,17 +1363,56 @@ h6 {
   margin-bottom: 0.125rem;
 }
 
+.my-1 {
+  margin-top: 0.25rem;
+  margin-bottom: 0.25rem;
+}
+
+.my-1\.5 {
+  margin-top: 0.375rem;
+  margin-bottom: 0.375rem;
+}
+
 .my-2 {
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
+}
+
+.my-3 {
+  margin-top: 0.75rem;
+  margin-bottom: 0.75rem;
+}
+
+.mb-1 {
+  margin-bottom: 0.25rem;
+}
+
+.mb-1\.5 {
+  margin-bottom: 0.375rem;
 }
 
 .mb-3 {
   margin-bottom: 0.75rem;
 }
 
-.mb-8 {
-  margin-bottom: 2rem;
+.ml-0 {
+  margin-left: 0px;
+}
+
+.ml-0\.5 {
+  margin-left: 0.125rem;
+}
+
+.mr-0 {
+  margin-right: 0px;
+}
+
+.mr-0\.5 {
+  margin-right: 0.125rem;
+}
+
+.mr-7 {
+  margin-right: 1.75rem;
 }
 
 .mt-\[1px\] {
@@ -1295,12 +1427,20 @@ h6 {
   display: flex;
 }
 
+.grid {
+  display: grid;
+}
+
 .hidden {
   display: none;
 }
 
-.h-24 {
-  height: 6rem;
+.h-12 {
+  height: 3rem;
+}
+
+.h-2 {
+  height: 0.5rem;
 }
 
 .h-3 {
@@ -1323,8 +1463,8 @@ h6 {
   height: 1px;
 }
 
-.h-full {
-  height: 100%;
+.h-dvh {
+  height: 100dvh;
 }
 
 .h-screen {
@@ -1335,20 +1475,12 @@ h6 {
   max-height: 8rem;
 }
 
-.max-h-screen {
-  max-height: 100vh;
-}
-
 .min-h-\[30px\] {
   min-height: 30px;
 }
 
-.min-h-\[40px\] {
-  min-height: 40px;
-}
-
-.min-h-screen {
-  min-height: 100vh;
+.w-12 {
+  width: 3rem;
 }
 
 .w-3 {
@@ -1367,8 +1499,8 @@ h6 {
   width: 1.25rem;
 }
 
-.w-7 {
-  width: 1.75rem;
+.w-56 {
+  width: 14rem;
 }
 
 .w-\[100px\] {
@@ -1377,10 +1509,6 @@ h6 {
 
 .w-\[142px\] {
   width: 142px;
-}
-
-.w-\[200px\] {
-  width: 200px;
 }
 
 .w-\[300px\] {
@@ -1395,16 +1523,24 @@ h6 {
   width: 100%;
 }
 
-.min-w-40 {
-  min-width: 10rem;
-}
-
 .min-w-48 {
   min-width: 12rem;
 }
 
+.min-w-64 {
+  min-width: 16rem;
+}
+
+.max-w-16 {
+  max-width: 4rem;
+}
+
 .flex-1 {
   flex: 1 1 0%;
+}
+
+.shrink-0 {
+  flex-shrink: 0;
 }
 
 .grow {
@@ -1415,30 +1551,38 @@ h6 {
   flex-grow: 0;
 }
 
-.cursor-pointer {
-  cursor: pointer;
+@keyframes pulse {
+  50% {
+    opacity: .5;
+  }
 }
 
-.select-none {
-  -webkit-user-select: none;
-     -moz-user-select: none;
-          user-select: none;
+.animate-pulse {
+  animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
+}
+
+.cursor-pointer {
+  cursor: pointer;
 }
 
 .resize-none {
   resize: none;
 }
 
-.resize-y {
-  resize: vertical;
-}
-
 .resize {
   resize: both;
 }
 
+.grid-cols-3 {
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+}
+
 .flex-col {
   flex-direction: column;
+}
+
+.flex-col-reverse {
+  flex-direction: column-reverse;
 }
 
 .items-start {
@@ -1451,10 +1595,6 @@ h6 {
 
 .justify-start {
   justify-content: flex-start;
-}
-
-.justify-end {
-  justify-content: flex-end;
 }
 
 .justify-center {
@@ -1485,8 +1625,28 @@ h6 {
   gap: 0.75rem;
 }
 
+.gap-4 {
+  gap: 1rem;
+}
+
+.space-x-3 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(0.75rem * var(--tw-space-x-reverse));
+  margin-left: calc(0.75rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
+.space-y-3 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0.75rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.75rem * var(--tw-space-y-reverse));
+}
+
 .overflow-auto {
   overflow: auto;
+}
+
+.overflow-hidden {
+  overflow: hidden;
 }
 
 .overflow-x-auto {
@@ -1515,6 +1675,11 @@ h6 {
   border-radius: 0.375rem;
 }
 
+.rounded-b {
+  border-bottom-right-radius: var(--border-radius);
+  border-bottom-left-radius: var(--border-radius);
+}
+
 .rounded-t {
   border-top-left-radius: var(--border-radius);
   border-top-right-radius: var(--border-radius);
@@ -1537,13 +1702,18 @@ h6 {
   border-bottom-width: 1px;
 }
 
-.border-t {
-  border-top-width: 1px;
-}
-
 .border-border {
   --tw-border-opacity: 1;
   border-color: oklch(var(--border) / var(--tw-border-opacity));
+}
+
+.border-primary {
+  --tw-border-opacity: 1;
+  border-color: oklch(var(--primary) / var(--tw-border-opacity));
+}
+
+.border-primary\/30 {
+  border-color: oklch(var(--primary) / 0.3);
 }
 
 .bg-alt {
@@ -1551,9 +1721,21 @@ h6 {
   background-color: oklch(var(--alt-background) / var(--tw-bg-opacity));
 }
 
+.bg-alt\/50 {
+  background-color: oklch(var(--alt-background) / 0.5);
+}
+
 .bg-background {
   --tw-bg-opacity: 1;
   background-color: oklch(var(--background) / var(--tw-bg-opacity));
+}
+
+.bg-background\/20 {
+  background-color: oklch(var(--background) / 0.2);
+}
+
+.bg-background\/70 {
+  background-color: oklch(var(--background) / 0.7);
 }
 
 .bg-black {
@@ -1574,10 +1756,6 @@ h6 {
   background-color: oklch(var(--primary) / 0.1);
 }
 
-.bg-primary\/20 {
-  background-color: oklch(var(--primary) / 0.2);
-}
-
 .bg-sidebar {
   --tw-bg-opacity: 1;
   background-color: oklch(var(--sidebar-background) / var(--tw-bg-opacity));
@@ -1587,8 +1765,8 @@ h6 {
   background-color: oklch(var(--sidebar-background) / 0.2);
 }
 
-.bg-success\/10 {
-  background-color: oklch(var(--success) / 0.1);
+.bg-warning\/10 {
+  background-color: oklch(var(--warning) / 0.1);
 }
 
 .bg-gradient-to-b {
@@ -1695,6 +1873,14 @@ h6 {
   padding-bottom: 0.375rem !important;
 }
 
+.\!pt-1 {
+  padding-top: 0.25rem !important;
+}
+
+.\!pt-1\.5 {
+  padding-top: 0.375rem !important;
+}
+
 .pb-0 {
   padding-bottom: 0px;
 }
@@ -1703,20 +1889,36 @@ h6 {
   padding-bottom: 0.125rem;
 }
 
+.pb-1 {
+  padding-bottom: 0.25rem;
+}
+
+.pb-1\.5 {
+  padding-bottom: 0.375rem;
+}
+
 .pb-11 {
   padding-bottom: 2.75rem;
 }
 
-.pr-1 {
-  padding-right: 0.25rem;
+.pt-0 {
+  padding-top: 0px;
 }
 
-.pr-1\.5 {
-  padding-right: 0.375rem;
+.pt-0\.5 {
+  padding-top: 0.125rem;
 }
 
-.pt-24 {
-  padding-top: 6rem;
+.pt-1 {
+  padding-top: 0.25rem;
+}
+
+.pt-1\.5 {
+  padding-top: 0.375rem;
+}
+
+.text-left {
+  text-align: left;
 }
 
 .text-center {
@@ -1725,10 +1927,6 @@ h6 {
 
 .font-mono {
   font-family: var(--font-mono);
-}
-
-.font-sans {
-  font-family: var(--font-sans);
 }
 
 .text-2xl {
@@ -1761,6 +1959,12 @@ h6 {
   letter-spacing: 0.005em;
 }
 
+.text-xss {
+  font-size: 7px;
+  line-height: 10px;
+  letter-spacing: 0.005em;
+}
+
 .font-bold {
   font-weight: 700;
 }
@@ -1777,6 +1981,10 @@ h6 {
   letter-spacing: 0.025em;
 }
 
+.tracking-wider {
+  letter-spacing: 0.05em;
+}
+
 .text-alt-foreground {
   --tw-text-opacity: 1;
   color: oklch(var(--alt-foreground) / var(--tw-text-opacity));
@@ -1784,6 +1992,16 @@ h6 {
 
 .text-alt-foreground\/70 {
   color: oklch(var(--alt-foreground) / 0.7);
+}
+
+.text-background {
+  --tw-text-opacity: 1;
+  color: oklch(var(--background) / var(--tw-text-opacity));
+}
+
+.text-error {
+  --tw-text-opacity: 1;
+  color: oklch(var(--error) / var(--tw-text-opacity));
 }
 
 .text-foreground {
@@ -1796,18 +2014,13 @@ h6 {
   color: oklch(var(--primary) / var(--tw-text-opacity));
 }
 
-.text-sidebar-foreground {
-  --tw-text-opacity: 1;
-  color: oklch(var(--sidebar-foreground) / var(--tw-text-opacity));
+.text-primary\/10 {
+  color: oklch(var(--primary) / 0.1);
 }
 
-.text-success {
+.text-warning {
   --tw-text-opacity: 1;
-  color: oklch(var(--success) / var(--tw-text-opacity));
-}
-
-.opacity-50 {
-  opacity: 0.5;
+  color: oklch(var(--warning) / var(--tw-text-opacity));
 }
 
 .opacity-90 {
@@ -1834,14 +2047,6 @@ h6 {
   --tw-backdrop-blur: blur(8px);
   -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
           backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
-}
-
-.transition {
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
 }
 
 @font-face {
@@ -1963,13 +2168,20 @@ h6 {
   --tw-ring-color: oklch(var(--primary) / 0.2);
 }
 
-.hover\:border-success:hover {
-  --tw-border-opacity: 1;
-  border-color: oklch(var(--success) / var(--tw-border-opacity));
+.hover\:bg-background\/30:hover {
+  background-color: oklch(var(--background) / 0.3);
+}
+
+.hover\:bg-primary\/30:hover {
+  background-color: oklch(var(--primary) / 0.3);
 }
 
 .hover\:bg-sidebar\/20:hover {
   background-color: oklch(var(--sidebar-background) / 0.2);
+}
+
+.hover\:bg-warning\/30:hover {
+  background-color: oklch(var(--warning) / 0.3);
 }
 
 .hover\:text-primary:hover {
@@ -1977,13 +2189,21 @@ h6 {
   color: oklch(var(--primary) / var(--tw-text-opacity));
 }
 
-.focus\:border-success:focus {
-  --tw-border-opacity: 1;
-  border-color: oklch(var(--success) / var(--tw-border-opacity));
+.hover\:underline:hover {
+  text-decoration-line: underline;
+}
+
+.focus\:bg-primary\/30:focus {
+  background-color: oklch(var(--primary) / 0.3);
 }
 
 .focus\:bg-sidebar\/20:focus {
   background-color: oklch(var(--sidebar-background) / 0.2);
+}
+
+.focus\:text-primary:focus {
+  --tw-text-opacity: 1;
+  color: oklch(var(--primary) / var(--tw-text-opacity));
 }
 
 .focus\:ring-1:focus {
@@ -1994,4 +2214,22 @@ h6 {
 
 .focus\:ring-primary\/20:focus {
   --tw-ring-color: oklch(var(--primary) / 0.2);
+}
+
+@media (min-width: 768px) {
+  .md\:m-2 {
+    margin: 0.5rem;
+  }
+
+  .md\:mb-8 {
+    margin-bottom: 2rem;
+  }
+
+  .md\:block {
+    display: block;
+  }
+
+  .md\:w-\[300px\] {
+    width: 300px;
+  }
 }
