--- a/assets/static/main.css
+++ b/assets/static/main.css
@@ -143,17 +143,46 @@
         @apply overflow-auto w-full;
     }
 
-    .chat pre code {
-        @apply block px-4 py-2 bg-sidebar/20 border-primary/10 text-foreground rounded font-mono text-sm;
+
+    .hl-chroma {
+        @apply flex-1 relative rounded !overflow-x-auto px-3 !py-2 my-2 bg-sidebar/10 border-primary/10 shadow text-foreground/70 font-mono text-sm;
+    }
+
+    .hl-line {
+        @apply flex;
+    }
+
+    .hl-kd {
+        @apply text-primary;
+    }
+
+    .hl-p {
+        @apply text-alt-foreground;
+    }
+
+    .hl-c {
+        @apply text-warning;
+    }
+
+    .hl-o {
+        @apply text-primary font-bold;
+    }
+
+    .hl-nf {
+        @apply text-secondary;
+    }
+
+    .hl-k {
+        @apply text-warning;
+    }
+
+    .hl-kt {
+        @apply text-success;
     }
 
     .chat > code,
     .chat p > code {
         @apply px-0.5 mx-0.5 bg-primary/10 leading-[10px] text-sm text-primary/80 border border-primary/10 rounded font-mono break-words;
-    }
-
-    .chat .hljs {
-        @apply flex-1 relative !overflow-x-auto px-3 !py-2 my-2 bg-sidebar/10 border-primary/10 text-foreground font-mono text-sm;
     }
 
     .chat hr {
@@ -243,6 +272,10 @@
         @apply border-b-0;
     }
 
+    .message-edited {
+        @apply !bg-primary/20;
+    }
+
     .dropzone {
     }
 
@@ -297,10 +330,6 @@
         @apply bg-sidebar/90;
     }
 
-    #toast-container {
-        @apply fixed bottom-3 right-3 z-50;
-    }
-
     .toast {
         @apply py-1.5 px-1.5 text-sidebar-foreground flex justify-start items-center gap-1;
     }
@@ -341,6 +370,75 @@
         mask-image: url("data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTAiIGhlaWdodD0iMTAiIHZpZXdCb3g9IjAgMCAxMCAxMCIgZmlsbD0ibm9uZSIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIj4KPHJlY3Qgd2lkdGg9IjEiIGhlaWdodD0iMSIgZmlsbD0iY3VycmVudENvbG9yIi8+Cjwvc3ZnPgo=");
         background-image: linear-gradient(90deg, transparent, rgb(66, 66, 90) 0, rgb(66, 66, 90) 100%, transparent);
         content: '';
+    }
+
+    .message-box:after {
+        background: linear-gradient(to right,rgba(245, 192, 192,0.7) 20%, rgba(245, 192, 192,0.7) 40%,oklch(var(--sidebar-background)) 50%,oklch(var(--sidebar-background)) 55%, rgba(245, 192, 192,0.7) 70%, rgba(245, 192, 192,0.7) 100%);
+        animation: shine 3s ease .1s forwards;
+        background-size: 200% auto;
+        content:"";
+        z-index:-1;
+        @apply absolute rounded-md;
+        position:absolute;
+        top:-2px;
+        left:-2px;
+        width:calc(100% + 4px);
+        height:calc(100% + 4px)
+    }
+
+    @keyframes shine {
+        to {
+            background-position:200%;
+            opacity:0
+        }
+    }
+
+    .loading-bar {
+        background: linear-gradient(90deg, rgba(245, 192, 192,0), rgba(245, 192, 192, 0.7) 20%, oklch(var(--sidebar-background)) 67.19%, oklch(var(--alt-background)));
+        height: 1px;
+        position: absolute;
+        z-index: -1;
+        opacity: 0;
+    }
+
+    .htmx-request.loading-bar {
+        animation: showTopShine .1s ease .2s forwards;
+    }
+
+    .htmx-request.loading-bar:after {
+        content:"";
+        width:50%;
+        height:1px;
+        position:absolute;
+        background:linear-gradient(90deg,transparent 0, rgba(245, 192, 192, 0.8) 50%,transparent 100%);
+        top:-1px;
+        opacity:0;
+        animation-duration:1.5s;
+        animation-delay:1s;
+        animation-timing-function:ease;
+        animation-name:loading;
+        animation-iteration-count: infinite;
+    }
+
+    @keyframes loading {
+        0% {
+            opacity:0;
+            transform:translateX(0)
+        }
+        50% {
+            opacity:1;
+            transform:translateX(100%)
+        }
+        to {
+            opacity:0;
+            transform:translateX(0)
+        }
+    }
+
+    @keyframes showTopShine {
+        to {
+            opacity:1
+        }
     }
 
     .dropdown-menu {
