--- a/templates/base.component.templ
+++ b/templates/base.component.templ
@@ -1,5 +1,10 @@
 package templates
 
+import (
+    "github.com/slack-go/slack"
+	"github.com/nikola-susa/pigeon-box/model"
+)
+
 templ logo() {
     <svg viewBox="0 0 128 128" fill="none">
         <g fill="currentColor">
@@ -11,3 +16,59 @@ templ logo() {
     </svg>
 }
 
+templ textareaRichEdit(label string, name string, message model.RenderMessage) {
+    <div x-data="Editor" x-init="init(true)" class="relative">
+        <div class="flex flex-col w-full border rounded bg-alt focus-within:border-primary shadow">
+            <div class="flex-1 relative">
+                <label for={name}>
+                    <span class="label hidden">{label}</span>
+                    <textarea
+                    x-ref="textarea"
+                    tabindex="1"
+                    id="message-input"
+                    name={name}
+                    x-model="value"
+                    @input="handleInputEvent(); resize()"
+                    rows="1"
+                    title={label}
+                    placeholder={label} class="block w-full min-h-[30px] border-0 p-4 pb-11 bg-inherit resize-none placeholder:text-sidebar-foreground/50">{ message.Text }</textarea>
+                </label>
+            </div>
+        </div>
+
+        <div class="absolute bottom-2 right-2 flex gap-1.5">
+            <button tabindex="1" type="button"
+                class="button button-basic"
+                title="Cancel editing"
+               x-on:htmx:after-request="forceFocus($el)"
+                hx-post={ "/t/" + message.ThreadID + "/m/" + message.ID + "/cancel" }
+                hx-swap="outerHTML"
+                hx-target="closest li"
+                hx-trigger="click, submit, keyup-escape from:body">
+                Cancel
+            </button>
+            <button tabindex="1" type="submit"
+                class="button button-success shadow"
+                x-bind:disabled="value.trim() === ''"
+                title="Save message">
+                Save
+            </button>
+        </div>
+    </div>
+}
+
+templ userAvatar(user slack.User) {
+    <div class="w-5 h-5 rounded shadow bg-alt relative" x-data="{ open: false }" @mouseenter="open = true" @mouseleave="open = false" @click="open = ! open">
+        <img x-ref="avatar" src={user.Profile.Image24} class="absolute inset-0 rounded opacity-90"  alt={user.Profile.RealName}/>
+        <div x-show="open" x-anchor="$refs.avatar" @click.outside="open = false" class="z-10 w-40 bg-background text-foreground border rounded shadow">
+            <div class="p-2 pb-0">
+                <p class="text-base">{user.Profile.RealName}</p>
+                <p class="text-sm text-alt-foreground">{user.Profile.Title}</p>
+            </div>
+            <div class="divider my-2"></div>
+            <div class="relative rounded shadow border h-[142px] w-[142px] bg-primary/10 m-2">
+                <img src={user.Profile.ImageOriginal} class="absolute inset-0 rounded flex justify-center items-center text-sm text-primary" alt={user.Profile.RealName}/>
+            </div>
+        </div>
+    </div>
+}
