--- a/assets/static/build.css
+++ b/assets/static/build.css
@@ -742,6 +742,16 @@ h6 {
   overflow: auto;
 }
 
+.chat a {
+  --tw-text-opacity: 1;
+  color: oklch(var(--secondary-background) / var(--tw-text-opacity));
+  text-decoration-line: underline;
+}
+
+.chat a:hover {
+  color: oklch(var(--secondary-background) / 0.7);
+}
+
 .hl-chroma {
   position: relative;
   margin-top: 0.5rem;
@@ -1220,6 +1230,19 @@ h6 {
   width: 0.75rem;
 }
 
+.avatar-list {
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: flex-end;
+  gap: 0.125rem;
+  padding-left: 0.25rem;
+}
+
+.avatar-list li {
+  z-index: 10;
+  margin-left: -0.25rem;
+}
+
 .fixed {
   position: fixed;
 }
@@ -1298,6 +1321,10 @@ h6 {
 
 .top-\[950px\] {
   top: 950px;
+}
+
+.isolate {
+  isolation: isolate;
 }
 
 .z-10 {
@@ -1473,24 +1500,8 @@ h6 {
   max-height: 8rem;
 }
 
-.max-h-\[150px\] {
-  max-height: 150px;
-}
-
-.max-h-\[350px\] {
-  max-height: 350px;
-}
-
-.max-h-80 {
-  max-height: 20rem;
-}
-
 .max-h-\[550px\] {
   max-height: 550px;
-}
-
-.max-h-\[70dvh\] {
-  max-height: 70dvh;
 }
 
 .max-h-\[60dvh\] {
@@ -1761,6 +1772,15 @@ h6 {
   background-color: oklch(var(--black) / var(--tw-bg-opacity));
 }
 
+.bg-border {
+  --tw-bg-opacity: 1;
+  background-color: oklch(var(--border) / var(--tw-bg-opacity));
+}
+
+.bg-border\/70 {
+  background-color: oklch(var(--border) / 0.7);
+}
+
 .bg-inherit {
   background-color: inherit;
 }
@@ -1785,6 +1805,10 @@ h6 {
 
 .bg-warning\/10 {
   background-color: oklch(var(--warning) / 0.1);
+}
+
+.bg-sidebar\/70 {
+  background-color: oklch(var(--sidebar-background) / 0.7);
 }
 
 .bg-gradient-to-b {
@@ -1935,6 +1959,10 @@ h6 {
   padding-top: 0.375rem;
 }
 
+.pb-3 {
+  padding-bottom: 0.75rem;
+}
+
 .text-left {
   text-align: left;
 }
@@ -2057,8 +2085,36 @@ h6 {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
+.ring-2 {
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
+
+.ring {
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(3px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
+
+.ring-\[1px\] {
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
+
 .ring-inset {
   --tw-ring-inset: inset;
+}
+
+.ring-background {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: oklch(var(--background) / var(--tw-ring-opacity));
+}
+
+.ring-border {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: oklch(var(--border) / var(--tw-ring-opacity));
 }
 
 .backdrop-blur {
