--- a/assets/static/main.css
+++ b/assets/static/main.css
@@ -143,6 +143,13 @@
         @apply overflow-auto w-full;
     }
 
+    .chat a {
+        @apply text-secondary underline;
+    }
+
+    .chat a:hover {
+        @apply text-secondary/70;
+    }
 
     .hl-chroma {
         @apply flex-1 relative rounded !overflow-x-auto px-3 !py-2 my-2 bg-sidebar/10 border-primary/10 shadow text-foreground/70 font-mono text-sm;
@@ -454,6 +461,14 @@
 
     .dropdown-menu-item > div > svg {
         @apply w-3 h-3;
+    }
+
+    .avatar-list {
+        @apply flex flex-row-reverse justify-end gap-0.5 pl-1;
+    }
+
+    .avatar-list li {
+        @apply -ml-1 z-10;
     }
 
 }
