--- a/assets/static/build.css
+++ b/assets/static/build.css
@@ -742,13 +742,13 @@ h6 {
   overflow: auto;
 }
 
-.chat a {
+.chat p > a {
   --tw-text-opacity: 1;
   color: oklch(var(--secondary-background) / var(--tw-text-opacity));
   text-decoration-line: underline;
 }
 
-.chat a:hover {
+.chat p > a:hover {
   color: oklch(var(--secondary-background) / 0.7);
 }
 
@@ -1556,6 +1556,14 @@ h6 {
   width: 100%;
 }
 
+.w-\[60\%\] {
+  width: 60%;
+}
+
+.w-\[80\%\] {
+  width: 80%;
+}
+
 .min-w-48 {
   min-width: 12rem;
 }
@@ -1672,6 +1680,12 @@ h6 {
   --tw-space-y-reverse: 0;
   margin-top: calc(0.75rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(0.75rem * var(--tw-space-y-reverse));
+}
+
+.space-y-6 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(1.5rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(1.5rem * var(--tw-space-y-reverse));
 }
 
 .overflow-auto {
@@ -1803,12 +1817,24 @@ h6 {
   background-color: oklch(var(--sidebar-background) / 0.2);
 }
 
+.bg-sidebar\/70 {
+  background-color: oklch(var(--sidebar-background) / 0.7);
+}
+
 .bg-warning\/10 {
   background-color: oklch(var(--warning) / 0.1);
 }
 
-.bg-sidebar\/70 {
-  background-color: oklch(var(--sidebar-background) / 0.7);
+.bg-sidebar\/40 {
+  background-color: oklch(var(--sidebar-background) / 0.4);
+}
+
+.bg-sidebar\/50 {
+  background-color: oklch(var(--sidebar-background) / 0.5);
+}
+
+.bg-sidebar\/30 {
+  background-color: oklch(var(--sidebar-background) / 0.3);
 }
 
 .bg-gradient-to-b {
@@ -1959,10 +1985,6 @@ h6 {
   padding-top: 0.375rem;
 }
 
-.pb-3 {
-  padding-bottom: 0.75rem;
-}
-
 .text-left {
   text-align: left;
 }
@@ -2085,15 +2107,15 @@ h6 {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.ring-2 {
-  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
-  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
-  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
-}
-
 .ring {
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(3px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
+
+.ring-2 {
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
 }
 
